# genie

./: .gitignore  .venv  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION.md  SPEC.md
genie/: __init__.py  agent.py  cli.py  config.py  loop.py
genie/hooks/: __init__.py  manager.py
genie/providers/: __init__.py  anthropic_client.py  base.py  factory.py  fake.py  openai_client.py
genie/sandbox/: __init__.py  base.py  local_subprocess.py  recording.py
genie/session/: __init__.py  session.py  transcript.py
genie/tools/: __init__.py  base.py  registry.py  result.py
genie/tools/builtins/: __init__.py  _workspace.py  bash.py  edit_file.py  read_file.py  write_file.py
genie/utils/: __init__.py  logger.py
prompts/: coding_system.md
tests/: test_agent.py  test_cli.py  test_config.py  test_logger.py  test_loop.py  test_smoke.py
tests/e2e/: test_user_stories.py
tests/integration/: test_phase0.py
tests/test_hooks/: test_manager.py
tests/test_providers/: test_anthropic_client.py  test_base.py  test_factory.py  test_fake.py  test_openai_client.py
tests/test_sandbox/: test_local_subprocess.py  test_recording.py
tests/test_session/: test_session.py  test_transcript.py
tests/test_tools/: test_base.py  test_registry.py  test_result.py
tests/test_tools/builtins/: test_bash.py  test_edit_file.py  test_read_file.py  test_workspace.py  test_write_file.py
